# bio-rust

./: Cargo.toml  LICENSE  README.md
src/: main.rs  shader.wgsl  universe.rs  vertex.rs
