[package]
name = "Bio-Rust"
version = "0.1.0"
edition = "2024"
description = "A hardware-accelerated DNA-to-simulation engine built with Rust and WGPU. Analyzes biological sequences to seed and evolve interactive cellular automata."
license = "MIT"
repository = "https://github.com/Vasco888888/bio-rust"
keywords = ["bioinformatics", "wgpu", "cellular-automata", "dna", "gpu"]
categories = ["science", "graphics", "simulation"]

[dependencies]
winit = "0.29"
wgpu = "24.0"
pollster = "0.3"
env_logger = "0.11"
log = "0.4"
bytemuck = { version = "1.15", features = ["derive"] }
bio = "2.0.1"
